syntax="proto3";
package accounts;
option go_package = "/Accounts";
import "SharedEntities/SharedEntities.proto";

service AccountService {
  rpc GetDetail(GetDetailsRequest) returns (GetDetailsResponse);
  rpc GetTransactionsHistory(GetTransactionsHistoryRequest) returns (GetTransactionsHistoryResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Block(BlockRequest) returns (BlockResponse);
}

message GetDetailsRequest {
  int32 id = 1;
  int32 usedId = 2;
}

message GetDetailsResponse {
  bool isCredit = 1;
  int32 balance = 2;
  sharedEntities.Currency currency = 3;
}

message GetTransactionsHistoryRequest {
  int32 id = 1;
  int32 userId = 2;
}

message GetTransactionsHistoryResponse {
  int32 id = 1;
  int32 userId = 2;
}

message CreateRequest {
  int32 userId = 1;
  bool isCredit = 2;
  sharedEntities.Currency currency = 3;
}

message CreateResponse {
  int32 id = 1;
  bool success = 2;
  string error = 3;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  bool success = 1;
  string error = 2;
}

message BlockRequest {
  int32 blockById = 1;
  int32 blockId = 2;
  int32 blockAccountId = 3;
}

message BlockResponse {
  string error = 2;
  bool success = 1;
}


